--- a/package.json
+++ b/package.json
@@ -3,28 +3,32 @@
   "version": "0.0.1",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "4.11.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.3",
-    "@testing-library/user-event": "^7.1.2",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
-    "react-scripts": "3.3.0",
-    "typescript": "^3.7.3",
-    "csv-string": "^3.1.7",
-    "is-core-module": "^2.0.0"
+    "@fortawesome/fontawesome-svg-core": "^1.2.34",
+    "@fortawesome/free-solid-svg-icons": "^5.15.2",
+    "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/core": "4.11.3",
+    "@testing-library/jest-dom": "^5.11.9",
+    "@testing-library/react": "^11.2.5",
+    "@testing-library/user-event": "^12.7.0",
+    "csv-string": "^4.0.1",
+    "is-core-module": "^2.2.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-popper-tooltip": "4.0.1",
+    "react-scripts": "4.0.2",
+    "typescript": "^4.1.5"
   },
   "devDependencies": {
     "@marknenadov/noctuidae-eslint-config": "0.1.10",
-    "@types/jest": "^24.0.23",
-    "@types/node": "^12.12.17",
-    "@types/react": "^16.9.53",
-    "@types/react-dom": "^16.9.8",
-    "autoprefixer": "10.1.0",
-    "eslint": "6.6.0",
-    "postcss": "8.2.2",
+    "@types/jest": "^26.0.20",
+    "@types/node": "^14.14.25",
+    "@types/react": "^17.0.1",
+    "@types/react-dom": "^17.0.0",
+    "autoprefixer": "10.2.4",
+    "eslint": "7.19.0",
+    "postcss": "8.2.6",
     "postcss-cli": "8.3.1",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^2.0.3"
   },
   "scripts": {
     "start": "npm run watch:css && react-scripts start",
