--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
     "@fortawesome/fontawesome-svg-core": "^1.3.0",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.17",
-    "@fortawesome/react-fontawesome": "^0.1.17",
     "@material-ui/core": "4.11.4",
     "csv-string": "^4.1.0",
     "is-core-module": "^2.8.1",
@@ -14,6 +13,7 @@
     "react-dom": "^17.0.2",
     "react-popper-tooltip": "4.3.0",
     "react-scripts": "4.0.3",
+    "react-select": "^5.2.2",
     "typescript": "^4.6.2"
   },
   "devDependencies": {
